<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_product">

    <TextView
        android:id="@+id/product_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="25dp"
        android:text="@string/product_name_text"
        app:layout_constraintBottom_toTopOf="@+id/product_name_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="17dp"
        android:text="@string/product_value_text"
        app:layout_constraintBottom_toTopOf="@+id/product_value_ed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name_ed" />

    <EditText
        android:id="@+id/product_name_ed"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/product_name_val"
        app:layout_constraintBottom_toTopOf="@+id/product_value_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name_text" />

    <EditText
        android:id="@+id/product_value_ed"
        android:layout_width="322dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="10dp"
        android:editable="true"
        android:ems="10"
        android:inputType="text"
        android:numeric="decimal"
        android:text="@string/product_value_val"
        app:layout_constraintBottom_toTopOf="@+id/PartyScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_value_text"
        app:layout_constraintVertical_bias="0.086" />

    <ScrollView
        android:id="@+id/PartyScrollView"
        android:layout_width="321dp"
        android:layout_height="232dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="239dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_value_text"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/party_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="124dp"
        android:layout_height="57dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="45dp"
        android:text="@string/confirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PartyScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>